development : Setup Swaggo documentation for sign in
